have initial page working with two lists and triggering an event when two objects are selected. (only allow one object to be selected from each list) also tested loading objects from a json file. and scaling them to each other based off oa a given dimension.

--- a/_css/screen.css
+++ b/_css/screen.css
@@ -4,15 +4,41 @@
    Author:
    ========================================================================== */
 
+ul#selectDimension {
+	list-style-type: none;
+}
 
+#selectDimension li {
+	float: left;
+	margin: 0 10px 0 10px;
+}
 
+#leftList {
+	float: left;
+}
 
+#rightList {
+	float: right;
+}
 
+.listWrapper {
+	height: 500px !important;
+	margin: 0 !important;
+	border: 1px solid black;
+}
 
+footer {
+	margin-top: 50px;
+}
 
+dd.selectedObject {
+	background-color: #600;
+	color: #fff;
+}
 
-
-
-
-
-
+dd:hover {
+	background-color: #f60;
+}
+dd.selectedObject:hover {
+	background-color: #600;
+}
