fixed bug in message toggling

--- a/_css/screen.css
+++ b/_css/screen.css
@@ -60,10 +60,10 @@ dd.selectedObject:hover {
 	width: 423px ! important;
 }
 
-.hidden {
+/*.hidden {
 	display: hidden;
 }
-
+*/
 #leftObject {
 	display: inline;
 }
