--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,28 +6,13 @@
 </p>
 
 <p>
-  <b>Password:</b>
-  <%= @course.password %>
+  <b>Number:</b>
+  <%= @course.number %>
 </p>
 
 <p>
-  <b>Firstname:</b>
-  <%= @course.firstName %>
-</p>
-
-<p>
-  <b>Lastname:</b>
-  <%= @course.lastName %>
-</p>
-
-<p>
-  <b>Start:</b>
-  <%= @course.start %>
-</p>
-
-<p>
-  <b>End:</b>
-  <%= @course.end %>
+  <b>Section:</b>
+  <%= @course.section %>
 </p>
 
 
