--- a/app/views/meeting_times/show.html.erb
+++ b/app/views/meeting_times/show.html.erb
@@ -36,18 +36,33 @@
 </p>
 
 <p>
-  <b>Start:</b>
-  <%= @meeting_time.start %>
+  <b>Period:</b>
+  <%= @meeting_time.period %>
 </p>
 
 <p>
-  <b>End:</b>
-  <%= @meeting_time.end %>
+  <b>Starttime:</b>
+  <%= @meeting_time.startTime %>
+</p>
+
+<p>
+  <b>Endtime:</b>
+  <%= @meeting_time.endTime %>
 </p>
 
 <p>
   <b>Course:</b>
   <%= @meeting_time.course %>
+</p>
+
+<p>
+  <b>Startdate:</b>
+  <%= @meeting_time.startDate %>
+</p>
+
+<p>
+  <b>Enddate:</b>
+  <%= @meeting_time.endDate %>
 </p>
 
 
