--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<div id="user_nav">
+		<% if person_signed_in? %>
+			Signed in as <%= current_person.email %>. Not you?
+			<%= link_to "Sign out", destroy_person_session_path %>
+		<% else %>
+			<%= link_to "Sign up", new_person_registration_path %> or <%= link_to "Sign in", new_person_session_path %>
+		<% end %>
+	</div>
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
