--- a/app/assets/javascripts/script.js.erb
+++ b/app/assets/javascripts/script.js.erb
@@ -35,7 +35,8 @@ $(document).ready(function(){
 	$("#chooseObjects").bind("objectsLoaded", function() {
 
 		var asset_path_bs = '<%= asset_path("rails.png")%>';
-		asset_path_bs = asset_path_bs.substring(0,asset_path_bs.indexOf("rails.png")) + "objects/";
+		// asset_path_bs = asset_path_bs.substring(0,asset_path_bs.indexOf("rails.png")) + "objects/";
+		asset_path_bs = "assets/objects/";
 			
 			$.each(objects, function(idx, val) {
 				
