show image on /items/

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,7 +21,7 @@
   <tr>
     <td><%= item.name %></td>
     <td><%= item.article %></td>
-    <td><%= item.filename %></td>
+    <td><img src="<%= item.filename %>" /></td>
     <td><%= item.diameter %></td>
     <td><%= item.length %></td>
     <td><%= item.width %></td>
