remember signed in user by default and rename the labels for the login/registration

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,10 +6,10 @@
   <div><%= f.label "Student Number" %><br />
   <%= f.text_field :email %></div>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label "First Name" %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :email_confirmation %><br />
+  <div><%= f.label "First Name, again please" %><br />
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.submit "Sign up" %></div>
