update logging to work better

--- a/app/assets/javascripts/script.js.erb
+++ b/app/assets/javascripts/script.js.erb
@@ -240,14 +240,16 @@ function sendLog (logInfoPairs) {
 			"logType_id":	logInfoPairs[i][0], 
 			"details":		logInfoPairs[i][1]
 		};
-		var p_id = $("#current_person_id");
-		if (p_id && p_id.text()) {
-			log["person_id"] = p_id.text();
+		if ($("#current_person_id").length == 1) {
+			var p_id = $("#current_person_id");
+			if (p_id && p_id.text()) {
+				log["person_id"] = p_id.text();
+			}
 		}
 		logs.push(log);
 	}
 	$.post("http://localhost:3000/interaction_logs/service", 
-		{"logs":logs}, 
+		{"logs":logs, "application":"Astronomical Proportions"}, 
 		function(data, textStatus, jqXHR){
 			console.log("in my callback");
 			console.log(data);
