--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
     <th>Height</th>
     <th>Area</th>
     <th>Volume</th>
-    <th>Person</th>
+    <th>Creator</th>
     <th></th>
     <th></th>
     <th></th>
@@ -21,14 +21,14 @@
   <tr>
     <td><%= item.name %></td>
     <td><%= item.article %></td>
-    <td><img src="<%= item.filename %>" /></td>
+    <td><img src="<%= item.filename %>" width="50"/></td>
     <td><%= item.diameter %></td>
     <td><%= item.length %></td>
     <td><%= item.width %></td>
     <td><%= item.height %></td>
     <td><%= item.area %></td>
     <td><%= item.volume %></td>
-    <td><%= item.person %></td>
+    <td><%= item.person.firstName %></td>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
     <td><%= link_to 'Destroy', item, confirm: 'Are you sure?', method: :delete %></td>
