show flash messages conditionally

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,9 +59,12 @@
 				</div>
 	    </div> <!-- /.navbar-inner -->
 	  </div> <!-- /.navbar-fixed-top -->
-		
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
+		<% if flash[:notice] %>
+			<p class="notice"><%= notice %></p>
+		<% end %>
+		<% if flash[:alert] %>
+			<p class="alert"><%= alert %></p>
+		<% end %>
 		<%= yield %>
 	</div>
 
