--- a/app/assets/javascripts/script.js.erb
+++ b/app/assets/javascripts/script.js.erb
@@ -256,7 +256,7 @@ function sendLog (logInfoPairs) {
 		}
 		logs.push(log);
 	}
-	$.post("http://astronomical-proportions.dev/interaction_logs/service", 
+	$.post("http://test.astronomicalproportions.org/interaction_logs/service", 
 		{"logs":logs, "application":"Astronomical Proportions"}, 
 		function(data, textStatus, jqXHR){
 			console.log("in my callback");
