--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Scale It!</title>
+	<title>Astronomical Proportions</title>
 
 	<%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -34,7 +34,7 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </a>
-	        <a class="brand" href="#">Scale It!</a>
+	        <a class="brand" href="#">Astronomical Proportions</a>
 	        <div class="nav-collapse">
 	          <ul class="nav">
 	            <li class="dimensionSelector" id="diameter"><a href="#diameter">Diameter</a></li>
