fixed seed file to expect surface area and area, added surface area to items form

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -44,6 +44,10 @@
     <%= f.text_field :area %>
   </div>
   <div class="field">
+    <%= f.label :surface_area %><br />
+    <%= f.text_field :surface_area %>
+  </div>
+  <div class="field">
     <%= f.label :volume %><br />
     <%= f.text_field :volume %>
   </div>
