--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
 	        <div class="nav-collapse">
 	          <ul class="nav">
 	            <li class="dimensionSelector" id="diameter"><a href="#diameter">Diameter</a></li>
+	            <li class="dimensionSelector" id="surface_area"><a href="#surface_area">Surface Area</a></li>
 	            <li class="dimensionSelector" id="length"><a href="#length">Length</a></li>
 	            <li class="dimensionSelector" id="width"><a href="#width">Width</a></li>
 	            <li class="dimensionSelector" id="height"><a href="#height">Height</a></li>
